--- a/index.html
+++ b/index.html
@@ -2,43 +2,41 @@
 <html lang="en">
 
 <head>
-    <!-- set up metadata information to be read in browser-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atul Kevat</title>
+    <title>Atul K.</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="home-banner" align="center"><img src="\src\tech.gif" height=auto width="450"></div>
-    <h1 class="home-greeting" align="center">Hi! This is Anon. </h1>
-    <br>
-    <div class="intro-paragraph">
-        <p>It's my first website. I am operating on Windows, using VS Code, and following W3school curriculum.
-        </p>
-        <p>I am on a self-taught journey, pursuing my bachelors degree in <em>computer application (BCA)</em>, studying
-            programming in between!</p>
-        <p>I'm using this website to showcase my progress.</p>
-        <br>
-        <p>This will evolve into a responsive, aesthetically-pleasing, and fully built portfolio of my own :)</p>
-    </div>
-    <br>
-    <br>
-    <p class="quote">“Sometimes it pays to stay in bed on <strong>Monday</strong>, rather than spending the rest of the week <strong>debugging</strong>
-        Monday’s code.” – Dan Salomon</p>
-    
-        <br>
-        <br>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <a href="#home">Anon</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <a href="https://www.instagram.com/anon.atul" target = '_blank'><button class="sitelinks">Instagram</button> </a>
-        <a href="https://linkedin.com/in/atulkevat/" target = '_blank'><button class="sitelinks">Linkedin</button> </a>
-        <a href="https://twitter.com/atul_kevat2002" target = '_blank'><button class="sitelinks">Twitter</button> </a>
-        <br>
-        <br>
-        <br>
-        
-        <div class="last-update">Last updated on July 2, 2022</div>
+    <main>
+        <section class="hero" id="home">
+            <div class="profile">
+                <img src="/assets/anon.jpeg" alt="Profile Picture of Atul Kevat">
+            </div>
+            <div class="intro">
+                <h1>Hello World, I'm Atul</h1>
+                <p>Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet. lorem20
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti odit dicta, iste, unde vero nobis aperiam sapiente ipsum sequi suscipit magnam, incidunt quaerat aliquid ipsa laborum cupiditate beatae ab iusto.
+                </p>
+            </div>
+        </section>
+    </main>
 </body>
-
 
 </html>
